<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.FinalizarVendaBoloExpostoVitrineActivity">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/texto_nome_bolo_toolbar_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/texto_toolbar_finalizar_venda"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toEndOf="@+id/imageView11"
            app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/botao_voltar_tela_id"
        android:layout_width="46dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:contentDescription="@string/botao"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/botao_voltar_tela" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="66dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/logo_padrao"
        android:padding="4dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toEndOf="@+id/botao_voltar_tela_id"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/ic_logo" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:background="@drawable/fundo_bolo_adicionados_expostos_vitrine"
        android:contentDescription="@string/fundo_azul_tela_finalizar_venda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="266dp"
        android:layout_height="233dp"
        app:cardElevation="50dp"
        app:cardCornerRadius="35dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7">

        <ImageView
            android:id="@+id/foto_salva_bolo_finalizar_venda_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/foto_tirada"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_fundo_add_user" />
    </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/bungee_shade"
            android:padding="4dp"
            android:text="@string/texto_valor_venda_bolo_cadastrado_venda_add_vitrine"
            android:textColor="@color/rosa"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2" />

        <TextView
            android:id="@+id/valor_venda_salvo_bolo_finalizar_venda_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="4dp"
            android:text="@string/Preco"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="@+id/textView36"
            app:layout_constraintStart_toEndOf="@+id/textView36"
            app:layout_constraintTop_toTopOf="@+id/textView36" />

        <TextView
            android:id="@+id/textView46"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/bungee_shade"
            android:padding="4dp"
            android:text="@string/texto_custo_bolo_cadastrado_venda_add_vitrine"
            android:textColor="@color/rosa"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView36" />

        <TextView
            android:id="@+id/custo_salvo_bolo_finalizar_venda_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="4dp"
            android:text="@string/texto_custo_bolo_cadastrado_venda_add_vitrine"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="@+id/textView46"
            app:layout_constraintStart_toEndOf="@+id/textView46"
            app:layout_constraintTop_toTopOf="@+id/textView46" />

        <Button
            android:id="@+id/botao_venda_ifood_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/btn"
            android:text="@string/texto_venda_ifood"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycler_ingredientes_bolo_vendido_id" />

        <Button
            android:id="@+id/botao_venda_loja_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/btn"
            android:text="@string/texto_botao_venda_loja"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/botao_venda_ifood_id" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_ingredientes_bolo_vendido_id"
            android:layout_width="match_parent"
            android:layout_height="216dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView49" />

        <TextView
            android:id="@+id/textView49"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/bungee_shade"
            android:padding="4dp"
            android:text="@string/texto_ingrediente_adicionados_bolo_venda_finalizar"
            android:textColor="@color/rosa"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/recycler_ingredientes_bolo_vendido_id"
            app:layout_constraintStart_toStartOf="@+id/recycler_ingredientes_bolo_vendido_id"
            app:layout_constraintTop_toBottomOf="@+id/custo_salvo_bolo_finalizar_venda_id" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>