<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NovaReceitaActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_nome_receita_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/edit_nome_receita" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/bungee_shade"
        android:text="@string/textViewInfoAddIngredienteReceita"
        android:textColor="@color/rosa"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout6" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_lista_itens_receita_estoque_id"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:padding="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/bungee_shade"
        android:text="@string/textViewInfoIngredientesAdicionadosReceita"
        android:textColor="@color/azul_claro"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/recycler_lista_itens_receita_estoque_id"
        app:layout_constraintStart_toStartOf="@+id/recycler_lista_itens_receita_estoque_id"
        app:layout_constraintTop_toBottomOf="@+id/recycler_lista_itens_receita_estoque_id" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_lista_item_add_id"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_valor_ingredientes_add_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/text_valores_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/recycler_lista_item_add_id"
        app:layout_constraintTop_toBottomOf="@+id/recycler_lista_item_add_id"
        app:layout_constraintVertical_bias="0.110000014" />

    <Button
        android:id="@+id/bt_proxima_etapa_finalizar_receita_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn"
        android:text="@string/botao_proxima_etapa_receita"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/recycler_lista_item_add_id"
        app:layout_constraintEnd_toEndOf="@+id/recycler_lista_item_add_id"
        app:layout_constraintTop_toBottomOf="@+id/recycler_lista_item_add_id" />

</androidx.constraintlayout.widget.ConstraintLayout>